# velvet-chains

./: .editorconfig  .generated_commits.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .ruff.toml  ADMIRALTY_ARMOR.md  BRIG_BRIEFING.mdx  CAPTAINS_LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORSAIR_CODEX.md  CORSAIR_CONDUCT.md  LICENSE  Makefile  QUARTERMASTER_CODEX.md  README.md  README.mdx  VELVET-ENGINE-OPERATIONS-MANUAL.md  generate_snark.py  git-snark  next.config.js  package-lock.json  package.json  pyproject.toml  snark_messages.py  test-all.sh  tsconfig.json  uv.lock.sha256  voidlight_choreographer.py  voidlight_whispers.py
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: benediction-release-request.yml  config.yml  ritual-enhancement-feature.yml  voidlight-misalignment-bug.yml
.github/workflows/: ci.yml  deploy.yml  docs-automerge.yml  labels.yml  pr-labeler.yml  pr-triage-cleanup.yml  release.yml  voidlight-lock-ritual.yml  voidlight-ritual.yml
.husky/: pre-commit  prepare-commit-msg
_LORE_/: 00_GPT.md  01_LORE.md  02_GAME.MD  05_Adventure_Echoes of the Neon Codex.md  100_ADDING_LORE.md  10_Adventure_Echoes of the Neon Codex.md  10_NPC_Captain Marlowe.md  10_NPC_Lira Voss.md  10_NPC_Patch.md  11_NPC_Captain Marlowe.md  12_NPC_Lira Voss.md  13_NPC_Patch.md  GAME.MD  GPT.mc  LORE.md  _ADDING_LORE.md
components/: LoreArchive.tsx
docs/: QUALITY_ASSURANCE.md  QUARTERMASTER_PROTOCOLS.md
examples/: README.md  THEATRICAL_DEMONSTRATIONS.md
hooks/: prepare-commit-msg
pages/: _document.js  index.js
pages/releases/: index.mdx  v0.2.1.mdx
rust_snark/: Cargo.toml  README.md
rust_snark/src/: main.rs
scripts/: build_lore_json.py  validate_lore.py
styles/: globals.css
voidlight_engine/: .rustfmt.toml  Cargo.toml  ENGINE_GRIMOIRE.md
voidlight_engine/src/: main.rs
voidlight_hooks/: voidlight-commit-ritual
