[package]
name = "voidlight"
version = "0.1.0"
edition = "2021"
description = "BDSM space-pirate romance engine for git commit flourishes"
license = "MIT"
readme = "README.md"
repository = "https://github.com/velvet-chains/snark_tester"
homepage = "https://github.com/velvet-chains/snark_tester"
keywords = ["git", "commit", "hook", "nsfw", "pirate"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Velvet Chains Maintainers <snark@voidlight.dev>"]

[[bin]]
name = "git-voidlight"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
