[package]
name = "voidlight"
version = "0.1.0"
edition = "2021"
description = "BDSM space-pirate romance engine for git commit flourishes"
license = "MIT"
readme = "ENGINE_GRIMOIRE.md"
repository = "https://github.com/hsmalley/velvet-chains"
homepage = "https://github.com/hsmalley/velvet-chains"
keywords = ["git", "commit", "hook", "nsfw", "pirate"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Velvet Chains Maintainers <snark@voidlight.dev>"]

[[bin]]
name = "git-voidlight"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
